--- a/README
+++ b/README
@@ -3,13 +3,14 @@ vimeo-dl help us to download video from vimeo.com
 # BUILD
 
 	- requires go 1.0 or greater
+	- GOPATH properly set up
 	- in order to build do
 		go build
 	  inside downloaded folder 
 
 # INSTALLATION
 
-	no require instalation
+	no instalation is required
 
 # USAGE
 
